package com.barbershop.shifts.entities;

public enum PaymentMethod {
    CASH,
    TRANSFER,
    CARD
}
