package com.barbershop.shifts.entities;

public enum PaymentStatus {
    PENDING,
    PAID,
    PARTIAL, //Requires refactor
    REFUNDED //Requires refactor
}
