package com.barbershop.shifts.entities;

public enum ShiftStatus {
    PENDING,
    COMPLETED,
    CANCELLED
}
